--- a/src/styles.css
+++ b/src/styles.css
@@ -60,7 +60,7 @@ body {
 
 .header {
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr;
     grid-column: 2 / 3;
     grid-row: 1 / 2;    
@@ -69,12 +69,6 @@ body {
     
 }
 
-.header-first-row {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr;
-}
 
 .sidebar {
     display: grid;
@@ -94,18 +88,6 @@ body {
 .sidebar-title {
     color: rgba(249,250,251,255);
     
-}
-
-
- .header-first-row > .search-bar > ul > li {
-    gap: 20px;
-    display: grid;
-    grid-template-columns: 1fr 10fr;
-    
-}
-
-.header-first-row > .search-bar > ul {
-    grid-row: 2 / 3;
 }
 
   .search-bar {
@@ -236,7 +218,7 @@ ul, #myUL {
 .dashboard-centering-logo-div {
     display: grid;
     justify-content: center;
-    margin-right: 1rem;
+    
 }
 
 .profile-picture {
@@ -268,12 +250,23 @@ ul, #myUL {
     grid-template-rows: 1fr;
     position: relative;
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.17);
+    
+}
+
+.header-lists {
+    display: grid;
+    grid-template-columns: 1.7fr;
+    grid-template-rows: 1fr;
+    position: relative;
+    box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.17);
+    
 }
 
 .hi-name{
     display: grid;
     grid-template-columns: 0.2fr 1.6fr;
     grid-template-rows: 1fr;
+    justify-content: center;
 }
 
 .navigation {
@@ -295,8 +288,8 @@ ul, #myUL {
     height: 100px;
 }
 .greeting-user {
-    margin-left: 0.9rem;
-    margin-top: 1rem;
+    display: grid;
+    align-content: center;
 }
 .hi {
     font-size: 0.9rem;
@@ -311,22 +304,33 @@ ul, #myUL {
 .buttons {
     height: 2.5rem;
     width: 7rem;
-    background-color: rgba(55,53,48,255);
+    background-color: rgba(255, 165, 0, 1);
+    cursor: pointer;
     border-radius: 150px;
     border: 0px;
-    margin-top: 0.5rem;
     font-family: robotoregular;
     font-size: 0.9rem;
     font-weight: bold;
     color: rgba(249,250,251,255);
+    margin-top: 1rem;
+}
+
+.button-task {
+    all: unset;
+    cursor: pointer;
+    display: flex;
+    width: 100%;
+    
+    
+    
+   
 }
 
 .header-buttons{
     display: grid;
     justify-content: center;
-    align-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    align-content: center;
+   
     
     
 }
@@ -401,12 +405,31 @@ ul, #myUL {
     display: grid;
     grid-template-columns: 0.1fr 0.2fr 5fr;
     grid-template-rows: 0.3fr 2fr 0.5fr 0.5fr;
-    background-color: red;
     border-radius: 10px;
     background: linear-gradient(to right, rgba(255, 165, 0, 1) 0px, rgba(255, 165, 0, 1) 8px, #fff 8px, #fff 100%);
     box-shadow: rgba(0, 0, 0, 0.315) 2px 2px 5px;
+    width: 100%;
+    
+    
     
 }
+
+a {
+    all: unset;
+    display: flex;
+    
+}
+
+.card-task {
+    display: grid;
+    grid-template-columns: 0.1fr 0.2fr 5fr;
+    grid-template-rows: 0.3fr 2fr 0.5fr 0.5fr;
+    border-radius: 10px;
+    background: linear-gradient(to right, rgb(0, 81, 255) 0px, rgb(0, 81, 255) 8px, #fff 8px, #fff 100%);
+    box-shadow: rgba(0, 0, 0, 0.315) 2px 2px 5px;
+    
+}
+
 
 
 
@@ -441,6 +464,12 @@ ul, #myUL {
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card-icons-tasks {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .cards-projects-title, .cards-announcements-title, .cards-trending-title {
