--- a/src/styles.css
+++ b/src/styles.css
@@ -106,6 +106,14 @@ body {
     grid-template-rows: 1fr;
 }
 
+#enter-book {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    
+}
+
 
  .profile-bar {
     display: grid;
@@ -146,10 +154,24 @@ body {
 .caret::before {
     content: "";
     display: inline-block;
-    background: url("./assets/folder-icon.svg") no-repeat center center;
-    width: 20px;
-    height: 20px;
+    background: url("./assets/folder-icon.svg");
+    width: 25px;
+    height: 25px;
   }
+
+  .home::before {
+    content: "";
+    display: inline-block;
+    background: url("./assets/home-account.svg");
+    width: 25px;
+    height: 25px;
+  }
+
+
+ .center {
+    display: flex;
+    justify-items: center;
+ }
 
 
 /* .caret::before {
@@ -183,6 +205,45 @@ body {
    
     
 }
+
+.home {
+
+
+    display: flex;
+    cursor: pointer;
+    user-select: none;
+    gap: 0.5rem;
+    align-items: center;
+    
+    
+   
+   
+
+}
+
+
+.position-form{
+    padding-left: 10px;
+}
+
+dialog {
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+    position: relative;
+    gap: 6rem;
+    left: 40%;
+    top: 40%;
+    width: 30rem;
+    height: 30rem;
+    border-radius: 10px;
+    background: linear-gradient(to right, rgba(255, 165, 0, 1) 0px, rgba(255, 165, 0, 1) 8px, #fff 8px, #fff 100%);
+    box-shadow: rgba(0, 0, 0, 0.315) 2px 2px 5px;
+    
+}
+
 
   /* Remove default bullets */
 ul, #myUL {
