--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,14 @@ body {
 
     
 }
+
+.position-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+}
+
 * {
 
     box-sizing: border-box;
@@ -106,13 +114,6 @@ body {
     grid-template-rows: 1fr;
 }
 
-#enter-book {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    
-    
-}
 
 
  .profile-bar {
@@ -224,24 +225,29 @@ body {
 
 .position-form{
     padding-left: 10px;
+    
 }
 
 dialog {
-    display: flex;
-    align-content: center;
-    justify-content: flex-start;
-    flex-direction: column;
-    flex-wrap: wrap;
-    position: relative;
-    gap: 6rem;
+    
     left: 40%;
-    top: 40%;
+    top: 20%;
     width: 30rem;
     height: 30rem;
     border-radius: 10px;
     background: linear-gradient(to right, rgba(255, 165, 0, 1) 0px, rgba(255, 165, 0, 1) 8px, #fff 8px, #fff 100%);
     box-shadow: rgba(0, 0, 0, 0.315) 2px 2px 5px;
     
+}
+
+
+.dialog-window {
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 6rem;
 }
 
 
