--- a/src/styles.css
+++ b/src/styles.css
@@ -527,6 +527,13 @@ a {
     grid-column: 3 / 4;
 }
 
+.card-icons-container-new-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row: 3 / 4;
+    grid-column: 3 / 4;
+}
+
 .card-icons {
     grid-column: 2 / 3;
     display: grid;
