Add delete function and return

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,22 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-left: 10px;
 
+
+}
+
+.position-delete{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 10px;
+
+    
+}
+
+.message {
+    width: 12rem;
 }
 
 * {
@@ -227,10 +242,7 @@ h1 {
 }
 
 
-.position-form{
-    padding-left: 10px;
-    
-}
+
 
 dialog {
     
@@ -260,10 +272,10 @@ dialog {
     
     left: 40%;
     top: 20%;
-    width: 30rem;
-    height: 30rem;
+    width: 22rem;
+    height: 22rem;
     border-radius: 10px;
-    background: linear-gradient(to right, rgb(255, 0, 0) 0px, rgb(0, 81, 255) 8px, #fff 8px, #fff 100%);
+    background: linear-gradient(to right, rgb(255, 0, 0) 0px, rgb(255, 0, 0) 8px, #fff 8px, #fff 100%);
     box-shadow: rgba(0, 0, 0, 0.315) 2px 2px 5px;
     
 }
