Add edit task DOM linking
Still needs to be able to cancel and be sent,
so the DOM can be updated as well as the localStorage

--- a/src/styles.css
+++ b/src/styles.css
@@ -256,7 +256,7 @@ dialog {
     
 }
 
-#task-dialog, #task-dialog-lview {
+#task-dialog, #task-dialog-lview, #edit-task-dialog-lview {
     
     left: 40%;
     top: 20%;
